fixed the misalignment of the cards

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -25,10 +25,10 @@
 .project02,
 .project03 {
   border: 2px;
-  margin: 3rem;
+  margin: 1rem;
   border-radius: 1rem;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
-  padding: 2rem;
+  padding: 1rem;
 }
 h3 a {
   font-family: "Roboto Condensed", sans-serif;
